fix catalog range slider. fix multiple js crashes on unlogged user and admin. fix modal-log-reg width on mobile

--- a/src/css/mainpage.css
+++ b/src/css/mainpage.css
@@ -40,6 +40,10 @@
     padding: 0 20px;
     padding-top: 207px;
     background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .mainpage .center {
